# libedit

./: CMakeLists.txt  LICENSE  README.md
compat/pdcurses/: terminfo.c
compat/pdcurses/vt/: pdcdisp.c
compat/regex/: cclass.h  cname.h  engine.c  regcomp.c  regerror.c  regex2.h  regexec.c  utils.h
compat/regex/include/: regex.h
compat/terminfo/: buffer.h  termcap.c  termcap.h  tinfo.c  tparm.c  tparser.c  tparser.h
compat/win32/: ansiprsr.c  console.c  debug.h  fileio.c  getline.c  misc.c  misc_internal.h  signal.c  signal_sigalrm.c  signal_sigchld.c  signal_wait.c  socketio.c  termio.c  tnnet.c  utf.c  utf.h  w32fd.c  w32fd.h  win32_dirent.c  win32_pty.c  win32_usertoken_utils.c
compat/win32/include/: ctype.h  dirent.h  dlfcn.h  fcntl.h  libgen.h  poll.h  pwd.h  signal.h  spawn.h  stddef.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h
compat/win32/include/sys/: ioctl.h  param.h  resource.h  select.h  socket.h  stat.h  statvfs.h  time.h  types.h  uio.h  un.h  wait.h
data/: termcap
demo/: demo.c
libedit/: chared.c  chartype.c  chartype.h  common.c  config.h  el.c  eln.c  emacs.c  filecomplete.c  hist.c  history.c  keymacro.c  literal.c  map.c  parse.c  prompt.c  read.c  readline.c  readline.h  refresh.c  search.c  sig.c  sig.h  strlcpy.c  sys.h  terminal.c  tokenizer.c  tty.c  unvis.c  vi.c  vis.c  vis.h
